...
                                .font(.caption)
                                .foregroundStyle(.secondary)
                        }
                        .tag(server.hostname)
                    }
                }
                .accessibilityIdentifier("Default Keyserver Picker")
            }

            Section("keyserver_settings.network_settings") {
                HStack {
                    Text("keyserver_settings.timeout")
                    Spacer()
...
